Attachment (wide-layout): Use semantic color for the save icon background on iOS https://bugs.webkit.org/show_bug.cgi?id=255849 rdar://107157550
Reviewed by Aditya Keerthi.

Without a proper semantic color, the color doesn't get updated when switching between light and dark modes.
The "-apple-system-opaque-tertiary-fill" color is not semantic, instead "-apple-system-tertiary-fill" should be used (as was already done on macOS).

* LayoutTests/platform/ios-wk2/fast/attachment/cocoa/wide-attachment-rendering-expected.txt:
* Source/WebCore/css/CSSValueKeywords.in:
* Source/WebCore/css/parser/CSSParserIdioms.cpp:
(WebCore::isValueAllowedInMode):
* Source/WebCore/html/shadow/attachmentElementShadow.css:
(button#attachment-save-button):
* Source/WebCore/rendering/RenderThemeIOS.mm:
(WebCore::cssValueSystemColorInformationList):

Canonical link: https://commits.webkit.org/263340@main

--- a/Source/WebCore/html/shadow/attachmentElementShadow.css
+++ b/Source/WebCore/html/shadow/attachmentElementShadow.css
@@ -182,7 +182,7 @@ button#attachment-save-button {
 #if (defined(WTF_PLATFORM_IOS_FAMILY) && WTF_PLATFORM_IOS_FAMILY)
     width: 40px;
     height: 40px;
-    background-color: -apple-system-opaque-tertiary-fill;
+    background-color: -apple-system-tertiary-fill;
     border: 0;
 #else
     width: 28px;
